# OpenGL-Template

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  run.sh  test
src/: CMakeLists.txt  config.h.in  main.cpp
